feat: Implement mobile navigation with a hamburger menu and enhance overall responsiveness for various screen sizes and orientations.

--- a/index.html
+++ b/index.html
@@ -165,6 +165,52 @@
             transform: translateY(0);
         }
 
+        .cta-button.secondary {
+            background: var(--glass);
+            border: 1px solid var(--glass-border);
+            color: var(--text);
+        }
+
+        .cta-button.secondary:hover {
+            border-color: var(--primary);
+            box-shadow: 0 10px 20px -5px var(--primary-glow);
+        }
+
+        /* Hero buttons container */
+        .hero-buttons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            width: 100%;
+        }
+
+        .hero-buttons .cta-button {
+            flex: 0 1 auto;
+            min-width: 180px;
+        }
+
+        @media (max-width: 768px) {
+            .hero-buttons {
+                flex-direction: column;
+                gap: 0.75rem;
+            }
+
+            .hero-buttons .cta-button {
+                width: 100%;
+                max-width: 280px;
+                margin: 0;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero-buttons .cta-button {
+                max-width: 100%;
+                min-width: unset;
+            }
+        }
+
         /* Mouse glow effect centerer */
         .mouse-glow {
             position: fixed;
@@ -291,13 +337,163 @@
             display: block;
         }
 
+        /* Mobile hamburger menu */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            padding: 5px;
+            z-index: 1001;
+        }
+
+        .hamburger span {
+            display: block;
+            width: 25px;
+            height: 3px;
+            background: var(--text);
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+
+        .hamburger.active span:nth-child(1) {
+            transform: rotate(45deg) translate(6px, 6px);
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(6px, -6px);
+        }
+
+        /* Mobile navigation overlay */
+        .mobile-nav-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--bg);
+            z-index: 999;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+        }
+
+        .mobile-nav-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .mobile-nav {
+            display: none;
+            position: fixed;
+            top: 70px;
+            left: 0;
+            width: 100%;
+            height: calc(100vh - 70px);
+            background: var(--bg);
+            z-index: 1000;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2rem;
+            padding: 2rem;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+
+        .mobile-nav.active {
+            transform: translateX(0);
+        }
+
+        .mobile-nav a {
+            color: var(--text);
+            text-decoration: none;
+            font-size: 1.5rem;
+            font-weight: 600;
+            padding: 1rem 2rem;
+            transition: all 0.3s ease;
+        }
+
+        .mobile-nav a:hover {
+            color: var(--primary);
+        }
+
+        .mobile-nav .nav-cta {
+            padding: 1rem 2.5rem;
+            font-size: 1.2rem;
+        }
+
         @media (max-width: 768px) {
             nav {
                 display: none;
             }
 
+            .hamburger {
+                display: flex;
+            }
+
+            .mobile-nav {
+                display: flex;
+            }
+
             header {
-                padding: 1.2rem 5%;
+                padding: 1rem 5%;
+            }
+
+            /* Touch-friendly button sizes */
+            .cta-button {
+                padding: 0.9rem 2rem;
+                font-size: 0.95rem;
+                min-height: 48px;
+            }
+
+            .filter-btn {
+                padding: 0.8rem 0.6rem;
+                min-height: 44px;
+                font-size: 0.8rem;
+            }
+
+            /* Improve color buttons for touch */
+            .color-btn {
+                width: 40px !important;
+                height: 40px !important;
+            }
+
+            /* Better typography for mobile */
+            h1,
+            .hero-title {
+                font-size: 1.8rem !important;
+                letter-spacing: 0.05em !important;
+            }
+
+            p {
+                font-size: 1rem;
+                line-height: 1.5;
+            }
+
+            /* Hero section adjustments */
+            .hero-section {
+                padding: 1.5rem 0.5rem;
+                min-height: auto;
+            }
+
+            /* Better button layout in hero */
+            .container .cta-button {
+                margin: 0.5rem;
+                width: calc(100% - 1rem);
+                max-width: 280px;
+            }
+
+            #camera-trigger {
+                margin-left: 0 !important;
+                margin-top: 0.5rem;
             }
         }
 
@@ -507,57 +703,232 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                padding-top: 70px;
+            }
+
             .container {
                 border-radius: 1rem;
-                padding: 1.5rem;
+                padding: 1.2rem;
+                width: 95%;
             }
 
             .hero-title {
-                font-size: 2.2rem;
+                font-size: 2rem;
                 background: linear-gradient(to right, var(--text), var(--primary));
                 -webkit-background-clip: text;
                 background-clip: text;
                 -webkit-text-fill-color: transparent;
             }
 
-            nav {
-                gap: 1rem;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            header {
-                flex-direction: column;
-                gap: 0.8rem;
-                padding: 1rem;
-            }
-
             .hero-subtitle {
-                font-size: 1rem;
-                padding: 0 1rem;
+                font-size: 0.95rem;
+                padding: 0 0.5rem;
+            }
+
+            .services-section {
+                padding: 60px 5%;
+            }
+
+            .services-section h2 {
+                font-size: 1.8rem !important;
             }
 
             .services-grid {
                 grid-template-columns: 1fr;
-                gap: 1.5rem;
+                gap: 1.2rem;
+            }
+
+            .service-card {
+                padding: 1.5rem;
             }
 
             .controls-panel {
                 flex-direction: column;
                 align-items: stretch;
-                padding: 1.2rem;
-                gap: 1.5rem;
+                padding: 1rem;
+                gap: 1.2rem;
+            }
+
+            .control-group {
+                width: 100%;
+            }
+
+            .filter-buttons {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 0.5rem;
+            }
+
+            .density-selectors {
+                display: grid !important;
+                grid-template-columns: repeat(4, 1fr) !important;
+            }
+
+            .color-selectors {
+                justify-content: center;
+            }
+
+            /* Preview container mobile adjustments */
+            .preview-container {
+                max-height: 50vh;
+                border-radius: 0.8rem;
             }
 
             footer {
                 flex-direction: column;
-                gap: 2rem;
+                gap: 1.5rem;
                 text-align: center;
+                padding: 2rem 5%;
+            }
+
+            footer #about {
+                text-align: center;
+            }
+
+            footer #about p {
+                font-size: 0.85rem;
             }
 
             .footer-links {
                 justify-content: center;
                 width: 100%;
+                gap: 1.5rem;
+            }
+
+            /* Disable heavy animations on mobile for performance */
+            .bg-gradient {
+                width: 300px;
+                height: 300px;
+                filter: blur(60px);
+            }
+        }
+
+        /* Extra small screens (phones in portrait) */
+        @media (max-width: 480px) {
+            body {
+                padding-top: 65px;
+            }
+
+            header {
+                padding: 0.8rem 4%;
+            }
+
+            .logo {
+                font-size: 1.2rem;
+            }
+
+            h1,
+            .hero-title {
+                font-size: 1.5rem !important;
+            }
+
+            .container {
+                padding: 1rem;
+                border-radius: 0.8rem;
+            }
+
+            .cta-button {
+                padding: 0.8rem 1.5rem;
+                font-size: 0.9rem;
+            }
+
+            .filter-buttons {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .density-selectors {
+                grid-template-columns: repeat(2, 1fr) !important;
+            }
+
+            .services-section h2 {
+                font-size: 1.5rem !important;
+            }
+
+            .service-card h3 {
+                font-size: 1.1rem;
+            }
+
+            .service-card p {
+                font-size: 0.85rem;
+            }
+
+            /* Stack download buttons */
+            #download-btn,
+            #download-txt-btn,
+            #copy-btn {
+                font-size: 0.85rem !important;
+                padding: 0.7rem !important;
+            }
+
+            .control-label {
+                font-size: 0.75rem;
+            }
+
+            .preview-container {
+                max-height: 40vh;
+            }
+
+            /* Reduce matrix rain density on small screens */
+            #matrix-rain-canvas {
+                opacity: 0.08;
+            }
+        }
+
+        /* Landscape mode optimizations for mobile */
+        @media (max-width: 900px) and (orientation: landscape) {
+            .hero-section {
+                min-height: auto;
+                padding: 1rem;
+            }
+
+            h1,
+            .hero-title {
+                font-size: 1.8rem !important;
+            }
+
+            .preview-container {
+                max-height: 60vh;
+            }
+
+            .controls-panel {
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .control-group {
+                width: calc(50% - 1rem);
+            }
+        }
+
+        /* Touch device hover state removal */
+        @media (hover: none) {
+            .cta-button:hover {
+                transform: none;
+            }
+
+            .filter-btn:hover {
+                background: rgba(255, 255, 255, 0.05);
+            }
+
+            .service-card:hover {
+                transform: none;
+            }
+
+            nav a::after {
+                display: none;
+            }
+        }
+
+        /* Safe area insets for notched phones */
+        @supports (padding: max(0px)) {
+            header {
+                padding-left: max(5%, env(safe-area-inset-left));
+                padding-right: max(5%, env(safe-area-inset-right));
+            }
+
+            footer {
+                padding-bottom: max(2rem, env(safe-area-inset-bottom));
             }
         }
     </style>
@@ -578,7 +949,23 @@
             </button>
             <a href="#hero" class="nav-cta" style="text-decoration: none;">Get Started</a>
         </nav>
+        <button class="hamburger" id="hamburger-btn" aria-label="Toggle Menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
+
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav" id="mobile-nav">
+        <a href="#hero" class="mobile-nav-link">Processor</a>
+        <a href="#services" class="mobile-nav-link">Capabilities</a>
+        <button class="theme-toggle" id="mobile-theme-btn" aria-label="Toggle Theme">
+            <span class="moon">🌙</span>
+            <span class="sun">☀️</span>
+        </button>
+        <a href="#hero" class="nav-cta mobile-nav-link" style="text-decoration: none;">Get Started</a>
+    </nav>
 
     <div class="bg-gradient"></div>
 
@@ -587,13 +974,14 @@
             <h1 id="hero-title" style="font-family: monospace; letter-spacing: 0.1em;">BINARY.SRC</h1>
             <p>Convert your photos into high-contrast digital art. 0s and 1s, matrix-style grids, and binary filters.
             </p>
-            <button class="cta-button" id="upload-trigger">
-                <span style="margin-right: 8px;">◈</span> Upload Image
-            </button>
-            <button class="cta-button" id="camera-trigger"
-                style="margin-left: 1rem; background: var(--glass); border: 1px solid var(--glass-border);">
-                <span style="margin-right: 8px;">📷</span> Live Camera
-            </button>
+            <div class="hero-buttons">
+                <button class="cta-button" id="upload-trigger">
+                    <span style="margin-right: 8px;">◈</span> Upload Image
+                </button>
+                <button class="cta-button secondary" id="camera-trigger">
+                    <span style="margin-right: 8px;">📷</span> Live Camera
+                </button>
+            </div>
             <input type="file" id="image-input" accept="image/*" style="display: none;">
             <video id="camera-feed" style="display: none;" autoplay playsinline></video>
 
@@ -787,11 +1175,52 @@
             document.body.classList.add('dark-mode');
         }
 
-        themeBtn.addEventListener('click', () => {
+        // Theme toggle for both desktop and mobile
+        function toggleTheme() {
             playDigitalSound(300, 'sine', 0.1);
             document.body.classList.toggle('dark-mode');
             const isDark = document.body.classList.contains('dark-mode');
             localStorage.setItem('theme', isDark ? 'dark' : 'light');
+        }
+
+        themeBtn.addEventListener('click', toggleTheme);
+
+        // Mobile theme button
+        const mobileThemeBtn = document.getElementById('mobile-theme-btn');
+        if (mobileThemeBtn) {
+            mobileThemeBtn.addEventListener('click', toggleTheme);
+        }
+
+        // Mobile hamburger menu functionality
+        const hamburgerBtn = document.getElementById('hamburger-btn');
+        const mobileNav = document.getElementById('mobile-nav');
+        const mobileNavLinks = document.querySelectorAll('.mobile-nav-link');
+
+        function toggleMobileMenu() {
+            hamburgerBtn.classList.toggle('active');
+            mobileNav.classList.toggle('active');
+            document.body.style.overflow = mobileNav.classList.contains('active') ? 'hidden' : '';
+        }
+
+        hamburgerBtn.addEventListener('click', () => {
+            playDigitalSound(500, 'sine', 0.05);
+            toggleMobileMenu();
+        });
+
+        // Close mobile menu when clicking links
+        mobileNavLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                if (mobileNav.classList.contains('active')) {
+                    toggleMobileMenu();
+                }
+            });
+        });
+
+        // Close menu on resize to desktop
+        window.addEventListener('resize', () => {
+            if (window.innerWidth > 768 && mobileNav.classList.contains('active')) {
+                toggleMobileMenu();
+            }
         });
 
         let originalImage = null;
